--- a/public/assets/css/component/content/button.css
+++ b/public/assets/css/component/content/button.css
@@ -1,3 +1,39 @@
-.btn {
-  display: inline-block;
+.btn,
+.btn-large {
+  display: inline-flex;
+
+  border: 4px solid var(--color-light-gray);
+  border-radius: 25px;
+  margin: auto;
+
+  cursor: pointer;
+}
+
+.btn-large {
+  display: flex;
+}
+
+.btn:hover {
+  transition: 0.2s ease-in-out;
+  background-color: var(--color-light-blue);
+}
+
+.btn .btn-logo {
+  margin: 14px 10px 14px 19px;
+}
+
+.btn .btn-text-medium,
+.btn .btn-text-small {
+  color: var(--color-black);
+  font-weight: bold;
+
+  margin: 15px 19px 15px 0;
+}
+
+.btn .btn-text-medium {
+  font-size: 17px;
+}
+
+.btn .btn-text-small {
+  font-size: 14px;
 }
