--- a/assets/css/components/btn.css
+++ b/assets/css/components/btn.css
@@ -1,6 +1,10 @@
 .btn {
   display: flex;
+  align-items: center;
+  gap: 10px;
   margin-left: 15px;
+  padding-left: 19px;
+  padding-right: 19px;
   width: auto;
   height: 50px;
   align-items: center;
@@ -10,13 +14,8 @@
 }
 
 .btn__icon {
-  padding: 14px 10px 14px 19px;
   width: 22px;
   height: 22px;
-}
-
-.btn__text {
-  padding-right: 19px;
 }
 
 .btn:hover {
