--- a/assets/css/components/icon.css
+++ b/assets/css/components/icon.css
@@ -1,7 +1,8 @@
 .info__icon {
-  width: 4px;
-  height: 10px;
-  padding: 7px 10px;
+  display: grid;
+  place-content: center;
+  width: 24px;
+  height: 24px;
   border: 1px solid var(--color-gray);
   border-radius: 50%;
 }
