--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,6 +22,8 @@
 @import url("layout/nav.css");
 @import url("layout/filter.css");
 @import url("layout/infobar.css");
+@import url("layout/accommodation.css");
+@import url("layout/activities.css");
 
 /*
  * Components
@@ -33,9 +35,13 @@
 @import url("components/title.css");
 @import url("components/text.css");
 @import url("components/label.css");
+@import url("components/intro.css");
 @import url("components/text-infobar.css");
 @import url("components/search.css");
 @import url("components/btn.css");
+@import url("components/title-populaire.css");
+@import url("components/btn-afficher-plus.css");
+@import url("components/activities.css");
 
 /*
  * Pages
