--- a/assets/css/components/search.css
+++ b/assets/css/components/search.css
@@ -27,12 +27,22 @@
 }
 
 .search__btn {
-  font-family: "Raleway";
-  font-size: 18px;
-  font-weight: 700;
-  color: var(--color-white);
   padding: 14px 16px;
   background-color: var(--color-blue);
   border: none;
   border-radius: 0 15px 15px 0;
+}
+
+.search__btn-icon {
+  display: none;
+}
+
+@media screen and (max-width: 767px) {
+  .search__btn-text {
+    display: none;
+  }
+
+  .search__btn-icon {
+    display: inline;
+  }
 }
