--- a/assets/css/layout/nav.css
+++ b/assets/css/layout/nav.css
@@ -1,4 +1,11 @@
-nav {
+.nav {
   display: inline-block;
   justify-items: flex-end;
+}
+
+@media screen and (max-width: 767px) {
+  .nav {
+    display: flex;
+    justify-items: center;
+  }
 }
