--- a/assets/css/abstract/variable.css
+++ b/assets/css/abstract/variable.css
@@ -9,5 +9,6 @@
   --color-gray: #d9d9d9;
   --color-light-gray: #f2f2f2;
   --color-black: #000000;
+  --color-black-o-10: #0000001a;
   --color-white: #ffffff;
 }
