--- a/assets/css/components/card.css
+++ b/assets/css/components/card.css
@@ -7,13 +7,25 @@
 
 .card {
   background-color: var(--color-white);
+  height: 207.25px;
   border-radius: 20px;
-  box-shadow: 0 3px 15px 0 rgb(from var(--color-black) r g b / 0.1);
+  box-shadow: 0 3px 15px 0 var(--color-black-o-10);
+}
+
+.card__frame {
+  position: relative;
+  height: 124px;
+  border: 5px solid var(--color-white);
+  border-radius: 20px 20px 0 0;
+  overflow: hidden;
 }
 
 .card__img {
-  width: 250.33px;
-  height: 124px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: 50% 50%;
+  border-radius: 20px 20px 0 0;
 }
 
 .card__text {
@@ -31,13 +43,36 @@
 
 .large--card {
   display: flex;
+  height: 146px;
   margin-bottom: 30px;
-  width: 369px;
   background-color: var(--color-white);
   border-radius: 15px;
 }
 
-.large--card__text {
+.large--card__frame {
+  width: 33.33%;
+  min-width: 33.33%;
+  height: 146px;
+  border: 5px solid var(--color-white);
+  border-right: 0;
+  border-radius: 20px 0 0 20px;
+
+  position: relative;
+  overflow: hidden;
+}
+
+.large--card__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: 50% 50%;
+  border-radius: 15px 0 0 15px;
+  position: absolute;
+  inset: 0;
+}
+
+.large--card__info {
+  position: relative;
   margin: 10px 5px 0 15px;
 }
 
@@ -45,6 +80,47 @@
   margin-bottom: 5px;
 }
 
-.large--card__info {
-  margin-bottom: 69px;
+.large--card__icon {
+  position: absolute;
+  bottom: 10px;
+  width: 68px;
+  height: 12px;
+}
+
+.high--card {
+  width: 23.29%;
+  border-radius: 20px;
+  box-shadow: 0 3px 15px 0 var(--color-black-o-10);
+}
+
+.high--card__frame {
+  width: 100%;
+  padding-bottom: 127.938%;
+  position: relative;
+  overflow: hidden;
+}
+
+.high--card__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: 50% 50%;
+  position: absolute;
+  border-radius: 20px 20px 0 0;
+}
+
+.high--card__text {
+  margin: 20px 19px;
+}
+
+@media screen and (max-width: 1024px) {
+  .container__large--card {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+  }
+
+  .large--card {
+    width: 1fr;
+  }
 }
