--- a/assets/css/components/label.css
+++ b/assets/css/components/label.css
@@ -1,4 +1,5 @@
 .label {
+  font-family: "Raleway";
   font-size: 17px;
   font-weight: 700;
 }
@@ -10,6 +11,14 @@
 }
 
 .label--small {
+  font-family: "Raleway";
   font-size: 16px;
   font-weight: 700;
+}
+
+.label--big--white {
+  font-family: "Raleway";
+  font-size: 18px;
+  font-weight: 700;
+  color: var(--color-white);
 }
