--- a/assets/css/components/nav.css
+++ b/assets/css/components/nav.css
@@ -13,3 +13,20 @@
 .nav__item:hover {
   border-color: var(--color-blue);
 }
+
+@media screen and (max-width: 767px) {
+  .nav-list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    width: 100%;
+    gap: 0;
+    margin: 0;
+  }
+
+  .nav__item {
+    padding: 0 0 15px 0;
+    text-align: center;
+    border-top: 0;
+    border-bottom: 2px solid transparent;
+  }
+}
