--- a/assets/css/layout/filter.css
+++ b/assets/css/layout/filter.css
@@ -1,5 +1,11 @@
 .filter {
   display: flex;
   align-items: center;
-  margin-bottom: 35px;
+  margin-bottom: 35.5px;
+}
+
+@media screen and (max-width: 1024px) {
+  .filter {
+    display: block;
+  }
 }
