--- a/assets/css/layout/header.css
+++ b/assets/css/layout/header.css
@@ -1,5 +1,17 @@
-header {
+.header {
   margin-bottom: 30px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  max-width: 1340px;
+  margin: 0 auto;
+  padding: 0 50px;
+}
+
+@media screen and (max-width: 767px) {
+  .header {
+    display: grid;
+    grid-template-rows: 68.69% 31.31%;
+    grid-template-columns: 1fr;
+    padding: 0;
+  }
 }
