--- a/assets/css/layout/infobar.css
+++ b/assets/css/layout/infobar.css
@@ -1,5 +1,10 @@
 .infobar {
   display: flex;
   align-items: center;
-  margin-bottom: 35px;
+}
+
+@media screen and (max-width: 1024px) {
+  .infobar {
+    margin-bottom: 35px;
+  }
 }
