--- a/assets/css/components/icon.css
+++ b/assets/css/components/icon.css
@@ -6,3 +6,9 @@
   border: 1px solid var(--color-gray);
   border-radius: 50%;
 }
+
+@media screen and (max-width: 767px) {
+  .info__icon {
+    padding: 7px 10px;
+  }
+}
