--- a/assets/css/components/search.css
+++ b/assets/css/components/search.css
@@ -1,12 +1,9 @@
 .search {
   display: flex;
+  align-items: stretch;
   margin-top: 35px;
   margin-bottom: 35px;
-}
-
-.search__form {
-  display: flex;
-  align-items: stretch;
+  width: 100%;
 }
 
 .search__label {
@@ -18,12 +15,16 @@
   border-radius: 15px 0 0 15px;
 }
 
+.search__border {
+  border: 1px solid var(--color-light-gray);
+  border-right: none;
+}
+
 .search__bar {
   line-height: 21px;
   padding: 14px 24px;
   width: 195px;
-  border: 1px solid var(--color-light-gray);
-  border-right: none;
+  border: 0;
 }
 
 .search__btn {
@@ -38,6 +39,33 @@
 }
 
 @media screen and (max-width: 767px) {
+  .search__label {
+    height: auto;
+  }
+
+  .search__border {
+    position: relative;
+    border-radius: 0 15px 15px 0;
+    flex: 1;
+  }
+
+  .search__bar {
+    padding: 14px 56px 14px 24px;
+    width: 100%;
+  }
+
+  .search__btn {
+    border-radius: 15px;
+    width: 49px;
+    height: 49px;
+    padding: 0;
+    line-height: 0;
+    display: grid;
+    place-content: center;
+    position: absolute;
+    inset: 0 0 0 auto;
+  }
+
   .search__btn-text {
     display: none;
   }
