--- a/assets/css/layout/footer.css
+++ b/assets/css/layout/footer.css
@@ -1,11 +1,18 @@
 .footer {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  padding: 20px;
-  padding-bottom: 5px;
   background-color: var(--color-gray);
   max-width: 1340px;
   margin-right: auto;
   margin-left: auto;
   padding: 0 50px;
+}
+
+@media screen and (max-width: 767px) {
+  .footer {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    padding: 30px;
+  }
 }
