--- a/assets/css/pages/home.css
+++ b/assets/css/pages/home.css
@@ -1,43 +1,76 @@
 .home-page {
-  display: grid;
-  grid-template-columns: 65% 32.015%;
-  /* grid-template-rows: repeat(3, auto); */
-  gap: 2.98% 2.62%;
   max-width: 1440px;
   margin: 0 auto;
   padding: 0 50px;
 }
 
-.search-section {
+.page__inner {
+  display: grid;
+  grid-template-columns: 65% 32.015%;
+  grid-template-rows: repeat(3, auto);
+  gap: 35px 2.98%;
+}
+
+.page__inner > .search-section {
   grid-column: 1/3;
   grid-row: 1/2;
 }
 
-.accommodation-section {
+.page__inner > .accommodation-section {
   grid-column: 1/2;
   grid-row: 2/3;
 }
 
-.popular-accommodation-section {
+.page__inner > .popular-accommodation-section {
   grid-column: 2/3;
   grid-row: 2/3;
 }
 
-.activities-section {
+.page__inner > .activities-section {
   grid-column: 1/3;
   grid-row: 3/4;
 }
 
 @media screen and (max-width: 1024px) {
-  .home-page {
-    display: block;
+  .page__inner {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, auto);
+  }
+
+  .page__inner > .search-section,
+  .page__inner > .accommodation-section,
+  .page__inner > .popular-accommodation-section,
+  .page__inner > .activities-section {
+    grid-row: auto;
+    grid-column: 1;
   }
 
   .accommodation-section {
-    margin-bottom: 50px;
+    margin-bottom: 15px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .home-page {
+    padding: 0;
+  }
+
+  .search-section {
+    padding: 0 20px;
+    order: 1;
+  }
+
+  .accommodation-section {
+    order: 3;
   }
 
   .popular-accommodation-section {
+    order: 2;
+    margin-bottom: 15px;
+  }
+
+  .activities-section {
+    order: 4;
     margin-bottom: 35px;
   }
 }
