correction of the search__label in tablet format

--- a/assets/css/components/search.css
+++ b/assets/css/components/search.css
@@ -38,6 +38,12 @@
   display: none;
 }
 
+@media screen and (max-width: 1024px) {
+  .search__label {
+    height: auto;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .search__label {
     height: auto;
