Adjustment of star icons and fixing of the search bar button display issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -47,6 +47,7 @@
 @import url("components/text-footer.css");
 @import url("components/filter-list.css");
 @import url("components/filter-title.css");
+@import url("components/icon-star.css");
 
 /*
  * Pages
